milvus/milvus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: milvus-ingress
  namespace: milvus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: milvus.gpt01mgmt01.cloudnative.nvdlab.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: milvus-vectordb
                port: 
                  number: 19530
